k8s/prod/forening-prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: unity-tool-prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unity-tool-frontend
  namespace: unity-tool-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unity-tool-frontend
  template:
    metadata:
      labels:
        app: unity-tool-frontend
    spec:
      containers:
      - name: unity-tool-frontend
        image: ghcr.io/okane-no/unity-tool-frontend:latest
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
      imagePullSecrets:
        - name: ghcr-login-secret
---
apiVersion: v1
kind: Service
metadata:
  name: unity-tool-frontend
  namespace: unity-tool-prod
spec:
  selector:
    app: unity-tool-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unity-tool-frontend-ingress
  namespace: unity-tool-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-certificate"
spec:
  ingressClassName: nginx
  rules:
  - host: eventlinktounity.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: unity-tool-frontend
            port:
              number: 80
  - host: www.eventlinktounity.com  # Added rule for www.eventlinktounity.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: unity-tool-frontend
            port:
              number: 80
  tls: 
  - hosts:
    - eventlinktounity.com
    - www.eventlinktounity.com
    secretName: unity-tool-frontend-tls
